<resources>
    <string translatable="false" name="app_name">Fokus</string>
    <string name="shortcut_add_task">@string/button_add_task</string>
    <string name="shortcut_add_event">@string/button_add_event</string>
    <string name="shortcut_add_subject">@string/button_add_subject</string>
    <string name="activity_tasks">Your Tasks</string>
    <string name="activity_tasks_pending">Your Pending Tasks</string>
    <string name="activity_tasks_finished">Your Finished Tasks</string>
    <string name="activity_subjects">Your Subjects</string>
    <string name="activity_subjects_today">Your Subjects Today</string>
    <string name="activity_subjects_tomorrow">Your Subjects Tomorrow</string>
    <string name="activity_archives">Your Archived Items</string>
    <string name="activity_logs">Notification Logs</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_backup">Backup and Restore</string>
    <string name="activity_notices">Third Party Notices</string>
    <string name="activity_open_source_licenses">Open Source Licenses</string>
    <string name="activity_about">About</string>
    <string name="menu_add">@string/button_add</string>
    <string name="menu_more">More</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_share">Share</string>
    <string name="menu_import">Import</string>
    <string name="menu_clear_items">Clear Logs</string>
    <string name="menu_export_to_file">Export to file</string>
    <string name="menu_share_directly">Share directly</string>
    <string name="menu_archived">Archived</string>
    <string name="navigation_tasks">Tasks</string>
    <string name="navigation_events">Events</string>
    <string name="navigation_subjects">Subjects</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_logs">Logs</string>
    <string name="navigation_settings">@string/activity_settings</string>
    <string name="navigation_about">@string/activity_about</string>
    <string name="button_add_task">Add Task</string>
    <string name="button_add_event">Add Event</string>
    <string name="button_add_subject">Add Subject</string>
    <string name="button_add">Add</string>
    <string name="button_new">New</string>
    <string name="button_save">Save</string>
    <string name="button_done">Done</string>
    <string name="button_undo">Undo</string>
    <string name="button_remove">Remove</string>
    <string name="button_continue">Continue</string>
    <string name="button_mark_as_finished">Mark as Finished</string>
    <string name="button_mark_as_important">Mark as Important</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_discard">Discard</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_learn_more">Learn More</string>
    <string name="button_view_schedules">View Schedules</string>
    <string name="empty_view_no_subjects_title">No Added Subjects</string>
    <string name="empty_view_no_subjects_summary">Subjects help sort your tasks and events, If you have one, add it using the button below.</string>
    <string name="empty_view_no_classes_today_title">No Classes for Today</string>
    <string name="empty_view_no_classes_today_summary">You have no class scheduled for today.</string>
    <string name="empty_view_no_classes_tomorrow_title">No Classes for Tomorrow</string>
    <string name="empty_view_no_classes_tomorrow_summary">You have no class schedules for tomorrow.</string>
    <string name="empty_view_no_tasks_title">No Pending Tasks</string>
    <string name="empty_view_no_tasks_summary">You currently have no pending tasks. If you have one, add it using the button below.</string>
    <string name="empty_view_no_finished_title">No Finished Tasks</string>
    <string name="empty_view_no_finished_summary">You currently have no finished tasks. Every task you marked as finished will show here.</string>
    <string name="empty_view_no_logs_title">No Recorded Logs</string>
    <string name="empty_view_no_logs_summary">Once a task, event or any reminder appear at your notification shade, it will also appear here.</string>
    <string name="empty_view_no_events_title">No Scheduled Events</string>
    <string name="empty_view_no_events_summary">You currently have no scheduled events. If you have one, add it using the button below.</string>
    <string name="empty_view_no_previous_title">No Previous Events</string>
    <string name="empty_view_no_previous_summary">You currently have no previous events. Every event that is past its schedule will appear here</string>
    <string name="empty_view_no_archived_tasks">No Archived Tasks</string>
    <string name="empty_view_no_archived_events">No Archived Events</string>
    <string name="empty_view_no_archived_subjects">No Archived Subjects</string>
    <string name="days_of_week_item_sunday">Sunday</string>
    <string name="days_of_week_item_monday">Monday</string>
    <string name="days_of_week_item_tuesday">Tuesday</string>
    <string name="days_of_week_item_wednesday">Wednesday</string>
    <string name="days_of_week_item_thursday">Thursday</string>
    <string name="days_of_week_item_friday">Friday</string>
    <string name="days_of_week_item_saturday">Saturday</string>
    <string name="days_of_week_item_sunday_short">Sun</string>
    <string name="days_of_week_item_monday_short">Mon</string>
    <string name="days_of_week_item_tuesday_short">Tue</string>
    <string name="days_of_week_item_wednesday_short">Wed</string>
    <string name="days_of_week_item_thursday_short">Thu</string>
    <string name="days_of_week_item_friday_short">Fri</string>
    <string name="days_of_week_item_saturday_short">Sat</string>
    <string name="weeks_of_month_item_week_1">Week 1</string>
    <string name="weeks_of_month_item_week_2">Week 2</string>
    <string name="weeks_of_month_item_week_3">Week 3</string>
    <string name="weeks_of_month_item_week_4">Week 4</string>
    <string name="dialog_assign_subject">Assign Subject</string>
    <string name="dialog_pick_start_time">Pick a Start Time</string>
    <string name="dialog_pick_end_time">Pick an End Time</string>
    <string name="dialog_pick_color_tag">Pick a color tag</string>
    <string name="dialog_select_notification_interval">Select notification interval</string>
    <string name="dialog_choose_theme">Choose theme</string>
    <string name="dialog_choose_backup">Choose a backup file</string>
    <string name="dialog_confirm_deletion_title">Do you want to remove \"%1$s\"?</string>
    <string name="dialog_confirm_deletion_summary">Once this item has been deleted, it cannot be recovered.</string>
    <string name="dialog_confirm_unarchive_title">Remove from archives?</string>
    <string name="dialog_confirm_unarchive_summary">You can always swipe left to archive this item again.</string>
    <string name="dialog_import_attachment_title">Import attachment?</string>
    <string name="dialog_import_attachment_summary">Due to the recent restrictions imposed by the Android system, the app will have to copy the file onto its own data folder. Continue?</string>
    <string name="dialog_import_attachment_confirm">Never ask again</string>
    <string name="dialog_schedule_details">Schedule Details</string>
    <string name="dialog_discard_changes">Discard changes?</string>
    <string name="dialog_select_file_import">Select file to import</string>
    <string name="dialog_send_to">Send to</string>
    <string name="dialog_sharing_options">Sharing options</string>
    <string name="dialog_class_schedules">Class Schedules</string>
    <string name="dialog_filter_options">Filter Options</string>
    <string name="dialog_new_attachment">New Attachment</string>
    <string name="dialog_attachment_name">@string/field_attachment_name</string>
    <string name="dialog_enter_website_url">Enter Website URL</string>
    <string name="dialog_sorting">Sorting</string>
    <string name="dialog_permission_needed_title">Storage Permission needed</string>
    <string name="dialog_permission_needed_summary">To attach a file from your device, the application needs the storage permission to be granted.</string>
    <string name="attachment_type_import_file">Import file</string>
    <string name="attachment_type_website_url">Website URL</string>
    <string name="sorting_directions_ascending">Ascending</string>
    <string name="sorting_directions_descending">Descending</string>
    <string name="filter_options_all">All</string>
    <string name="filter_options_pending_tasks">Pending only</string>
    <string name="filter_options_finished_tasks">Finished only</string>
    <string name="filter_options_today_classes">Today only</string>
    <string name="filter_options_tomorrow_classes">Tomorrow only</string>
    <string name="field_subject_code">Subject Code</string>
    <string name="field_description">Description</string>
    <string name="field_days_of_week">Days of Week</string>
    <string name="field_weeks_of_month">Weeks of Month</string>
    <string name="field_start_time">Start Time</string>
    <string name="field_end_time">End Time</string>
    <string name="field_task_name">Task Name</string>
    <string name="field_notes">Notes</string>
    <string name="field_subject">Subject</string>
    <string name="field_due_date">Due Date</string>
    <string name="field_event_name">Event Name</string>
    <string name="field_schedule">Schedule</string>
    <string name="field_location">Location</string>
    <string name="field_attachments">Attachments</string>
    <string name="field_class_time">Class Time</string>
    <string name="field_color">Color Tag</string>
    <string name="field_priority">Priority</string>
    <string name="field_status">Status</string>
    <string name="field_not_set">Not Set</string>
    <string name="field_due_in_the_next_meeting">In the next meeting</string>
    <string name="field_due_pick_from_schedule">Pick from class schedule</string>
    <string name="field_due_custom">Custom</string>
    <string name="field_attachment_name">Attachment name</string>
    <string name="field_instructor">Instructor</string>
    <string name="field_classroom">Classroom</string>
    <string name="hint_subject_description">The name of the subject</string>
    <string name="hint_task_notes">Some ideas or minor details about the task</string>
    <string name="hint_event_location">Enter a room, a building or any place</string>
    <string name="hint_event_notes">Some ideas or minor details about the event</string>
    <string name="feedback_subject_removed">Subject removed</string>
    <string name="feedback_log_removed">Log removed</string>
    <string name="feedback_task_removed">Task removed</string>
    <string name="feedback_schedule_removed">Schedule removed</string>
    <string name="feedback_attachment_added">Attachment added</string>
    <string name="feedback_attachment_removed">Attachment removed</string>
    <string name="feedback_event_removed">Event removed</string>
    <string name="feedback_task_marked_as_finished">Task marked as finished</string>
    <string name="feedback_task_marked_as_pending">Task marked as pending</string>
    <string name="feedback_subject_empty_name">You forgot to enter the subject code</string>
    <string name="feedback_subject_empty_description">You forgot to enter the description</string>
    <string name="feedback_subject_no_schedule">You forgot to add a schedule</string>
    <string name="settings_group_contribute">Contribute</string>
    <string name="settings_translate">Translate</string>
    <string name="settings_report_an_issue">Report an issue</string>
    <string name="settings_third_party_notices">@string/activity_notices</string>
    <string name="settings_build_version">Build Version</string>
</resources>