<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_home"
            android:title="@string/navigation_home"
            android:icon="@drawable/ic_round_home_24"/>

        <item
            android:id="@+id/navigation_logs"
            android:title="@string/navigation_logs"
            android:icon="@drawable/ic_round_query_stats_24"/>

    </group>

    <item
        android:id="@+id/navigation_settings"
        android:title="@string/navigation_settings"
        android:icon="@drawable/ic_round_settings_24"/>

    <item
        android:id="@+id/navigation_about"
        android:title="@string/navigation_about"
        android:icon="@drawable/ic_round_info_24"/>

</menu>