<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_core"
    app:startDestination="@id/navigation_tasks">

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.isaiahvonrundstedt.fokus.features.task.TaskFragment"
        android:label="@string/navigation_tasks"
        tools:layout="@layout/fragment_task"/>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.isaiahvonrundstedt.fokus.features.event.EventFragment"
        android:label="@string/navigation_events"
        tools:layout="@layout/fragment_event"/>

    <fragment
        android:id="@+id/navigation_subjects"
        android:name="com.isaiahvonrundstedt.fokus.features.subject.SubjectFragment"
        android:label="@string/activity_subjects"
        tools:layout="@layout/fragment_subject"/>

    <action
        android:id="@+id/action_to_navigation_tasks"
        app:destination="@id/navigation_tasks"/>

    <action
        android:id="@+id/action_to_navigation_events"
        app:destination="@id/navigation_events"/>

    <action
        android:id="@+id/action_to_navigation_subjects"
        app:destination="@id/navigation_subjects"/>

</navigation>